# ttc_ratings

./: Homepage.py  README.md  pyproject.toml  requirements.txt
data/: all_massey_ratings_over_time.csv  cleaned_ttc_scores.csv  final_massey_ratings.csv  player_summary.csv  ttc_scores.csv
models/: massey_ratings_to_pred_win_model.pkl
pages/: match_results_history.py
src/: clean_data.py  fit_model.py  src.py
